assets/css/theme.css
/*DataTables*/
.dataTables_wrapper {
	width: calc(100% - 1px);
}

.dataTables_wrapper .dataTables_paginate .paginate_button {
	box-sizing: border-box;
	display: inline-block;
	min-width: 1.5em;
	padding: 5px 10px !important;
	margin-left: 2px;
	text-align: center;
	text-decoration: none !important;
	cursor: pointer;
	color: #333 !important;
	border: 1px solid transparent;
	border-radius: 2px;
}

.dataTables_wrapper .dataTables_paginate .paginate_button.current,
.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
	color: #333 !important;
	border: 1px solid #CACACA;
	background: linear-gradient(to bottom, #F9F9F9 0%, #F9F9F9 100%) repeat scroll 0% 0% transparent;
}

.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
	color: #FFF !important;
	border: 1px solid rgba(122, 122, 122, 1);
	background: linear-gradient(to bottom, rgba(162, 162, 162, 1) 0%, rgba(162, 162, 162, 1) 100%) repeat scroll 0% 0% transparent;
}

.dataTables_wrapper label {
	font-weight: normal;
}

.dataTables_wrapper input,
.dataTables_wrapper select {
	border: 1px solid #ccc;
	border-radius: 2px;
}

.dataTable {
	border: 1px solid #DDD !important;
	border-spacing: 0px !important;
	border-collapse: collapse !important;
}

.dataTable td,
.dataTable th {
	border: 1px solid #DDD !important;
}

.dataTable thead > tr > th {
	border-bottom-width: 2px !important;
}

/*Panels*/
.panel-success {
	border-color: rgba(68, 157, 68, 1);
}
.panel-success>.panel-heading {
	background-color: rgba(68, 157, 68, 1);
	border-color: rgba(68, 157, 68, 1);
	color: #FFF;
}
.panel-warning {
	border-color: rgba(240, 173, 78, 1);
}
.panel-warning>.panel-heading {
	background-color: rgba(240, 173, 78, 1);
	border-color: rgba(240, 173, 78, 1);
	color: #FFF;
}
.panel-info {
	border-color: rgba(91, 192, 222, 1);
}
.panel-info>.panel-heading {
	background-color: rgba(91, 192, 222, 1);
	border-color: rgba(91, 192, 222, 1);
	color: #FFF;
}
.panel-danger {
	border-color: rgba(217, 83, 79, 1);
}
.panel-danger>.panel-heading {
	background-color: rgba(217, 83, 79, 1);
	border-color: rgba(217, 83, 79, 1);
	color: #FFF;
}

/*Dialogs*/
.form-container,
.confirm-container,
.result-container {
	margin-right: auto;
	margin-left: auto;
	margin-top: 20px;
}

.form-container {
	max-width: 500px;
}

.confirm-container,
.result-container {
	max-width: 625px;
}

.form-container.panel .panel-heading,
.form-container.panel .panel-footer,
.confirm-container.panel .panel-heading,
.confirm-container.panel .panel-footer,
.result-container .panel-heading,
.result-container .panel-footer {
	text-align: center;
}

.alert-warning {
	background-color: rgba(231, 144, 0, 0.1);
	border-color: rgba(231, 144, 0, 1);
	/*color: rgba(231, 144, 0, 1);*/
	color: rgba(138, 109, 59, 1);
}

.alert-primary {
	background-color: rgba(66, 139, 202, 0.1);
	border-color: rgba(66, 139, 202, 1);
	color: rgba(66, 139, 202, 1);
	color: rgba(49, 112, 143, 1);
}

.alert-success {
	background-color: rgba(22, 155, 6, 0.1);
	border-color: rgba(22, 155, 6, 1);
	/*color: rgba(22, 155, 6, 1);*/
	color: rgba(60, 118, 61, 1);
}

.alert-info {
	background-color: rgba(91, 192, 222, 0.1);
	border-color: rgba(91, 192, 222, 1);
	/*color: rgba(91, 192, 222, 1);*/
	color: rgba(49, 112, 143, 1);
}

.alert-danger {
	background-color: rgba(214, 88, 72, 0.1);
	border-color: rgba(214, 88, 72, 1);
	/*color: rgba(214, 88, 72, 1);*/
	color: rgba(169, 68, 66, 1);
}

.alert-default {
	background-color: #F8F8F8;
	border-color: #DDDDDD;
	color: #777777;
}

.alert-small {
	padding: 7px 10px;
}

